# Vitman

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile_base  build.sh  docker-compose.yml  readme.md
.cargo/: config.toml
deploy/: sources.list
scripts/: test.py  test.sh
src/: errors.rs  handlers.rs  lib.rs  main.rs  midware.rs  routes.rs  utils.rs  ws.rs
src/process/: demec.rs  filter.rs  jitter.rs  mod.rs  vad.rs
src/roles/: mod.rs  server.rs  user.rs  vitman.rs
static/: channel copy.html  channel.html
